Header architecture done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>University of Pennsyvalnia</title>
 </head>
+
 <body>
-    <h1> Hello world</h1>
+    <header>
+        <div>
+            <p><a href="#">On Friday, February 14, 2025 the University will suspend normal operations for the Eagles
+                    victory parade</a></p>
+            <p>Normal operations will resume Monday, February 17, 2025</p>
+        </div>
+
+        <div class="bg-[url(images/avian-bird-flu.jpg)] bg-no-repeat bg-cover">
+            <!-- <img src="images/avian-bird-flu.jpg" alt=""> -->
+            <div class="bg-black bg-opacity-30  ">
+                <div>
+                    <img src="images/UPenn-logo.svg" alt="" srcset="">
+                    <div>
+                        <div>
+                            <p><i class="fa fa-search"></i></p>
+                            <button>RESSOURCES</button>
+                            <p><a href="#">GIVE TO PENN</a></p>
+                        </div>
+                        <div>
+
+                            <nav>
+                                <p><a href="#">ACADEMICS</a></p>
+                                <p><a href="#">ADMISSIONS & AID</a></p>
+                                <p><a href="#">ATHLETICS</a></p>
+                                <p><a href="#">RESEARCH & INNOVATION</a></p>
+                                <p><a href="#">LIFE AT PENN</a></p>
+                                <p><a href="#">ABOUT</a></p>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <h1>Health Sciences</h1>
+                    <h1>How Penn is helping with bird flu research and disease surveillance</h1>
+                    <p>Faculty are working on a new vaccine for the H5N1 virus, studying its transmission, and helping the state test samples from birds and mammals.</p>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div>
+            
+        </div>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
