All architecture done

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
             </div>
             <div>
-                
+
                 <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
                 <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
                 <a href="#"><img src="images/icon-twitter.svg" alt="Thread"></a>
@@ -315,12 +315,104 @@
         </div>
         <div>
             <h3>Equal Opportunity and Nondiscrimination at Penn</h3>
-            <p>The University of Pennsylvania values diversity and seeks talented students, faculty and staff with diverse backgrounds, experiences, and perspectives. The University of Pennsylvania does not discriminate on the basis of race, color, sex, sexual orientation, gender identity, religion, creed, national or ethnic origin, citizenship status, age, disability, veteran status or any other legally protected class status in the administration of its admissions, financial aid, educational or athletic programs, or other University-administered programs or in its employment practices. Questions or complaints regarding this policy should be directed to the Executive Director of the Office of Affirmative Action and Equal Opportunity Programs, Franklin Building, 3451 Walnut Street, Suite 421, Philadelphia, PA 19104-6106; or (215) 898-6993 (Voice).</p>
+            <p>The University of Pennsylvania values diversity and seeks talented students, faculty and staff with
+                diverse backgrounds, experiences, and perspectives. The University of Pennsylvania does not discriminate
+                on the basis of race, color, sex, sexual orientation, gender identity, religion, creed, national or
+                ethnic origin, citizenship status, age, disability, veteran status or any other legally protected class
+                status in the administration of its admissions, financial aid, educational or athletic programs, or
+                other University-administered programs or in its employment practices. Questions or complaints regarding
+                this policy should be directed to the Executive Director of the Office of Affirmative Action and Equal
+                Opportunity Programs, Franklin Building, 3451 Walnut Street, Suite 421, Philadelphia, PA 19104-6106; or
+                (215) 898-6993 (Voice).</p>
             <a href="#">NON DISCRIMINATION STATEMENT</a>
         </div>
     </main>
     <footer>
-        
+        <div>
+            <div>
+                <div>
+                    <img src="images/UPenn-logo.svg" alt="">
+                    <div>
+                        <p>Philadelphia, PA 19104</p>
+                        <p>Telephone: <a href="tel:+215898-5000">(215) 898-5000</a></p>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <p>Contact Us</p>
+                        </a>
+                        <a href="#">
+                            <p>Maps</p>
+                        </a>
+                        <a href="#">
+                            <p>Parking</p>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <h3>Navigate</h3>
+                    <hr>
+                    <div>
+                        <a href="#">
+                            <p>Alumni</p>
+                        </a>
+                        <a href="#">
+                            <p>Athletics</p>
+                        </a>
+                        <a href="#">
+                            <p>Diversity</p>
+                        </a>
+                        <a href="#">
+                            <p>Health Care</p>
+                        </a>
+                        <a href="#">
+                            <p>Libraries</p>
+                        </a>
+                        <a href="#">
+                            <p>Online Learning</p>
+                        </a>
+                        <a href="#">
+                            <p>Penn Global</p>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <h4>Penn's Heritage</h4>
+                    <p>As America’s first university, Penn has a history that dates back to 1740 and shares many ties with the colonial city of Philadelphia and the birth of our nation.</p>
+                    <a href="#">OUR HISTORY</a>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <a href="#">Disclaimer</a>
+                    <a href="#">Emergency Services</a>
+                    <a href="#">Nondiscrimination</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Report Accessibility Issues and Get Help</a>
+                    <a href="#">Report Copyright Infringement</a>
+                </div>
+                <svg width="14px" height="16px" viewBox="0 0 14 16" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g transform="translate(-122.000000, -7189.000000)" stroke="#FFFFFF" stroke-width="1.5">
+                            <g transform="translate(0.000000, 5844.000000)">
+                                <g>
+                                    <g transform="translate(94.000000, 1318.000000)">
+                                        <g>
+                                            <g transform="translate(29.000000, 28.000000)">
+                                                <polyline id="Path"
+                                                    points="0 6.26086957 6 -1.77191595e-13 12 6.26086957"></polyline>
+                                                <line x1="6" y1="0.75" x2="6" y2="14.25" stroke-linecap="square"></line>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+        </div>
+
     </footer>
 </body>
 
