Stop mobile, starting Desktop screen

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <option value="">Campus and communities</option>
                     </select>
                 </div>
-                <h1 class="text-2xl pt-2 pb-2"><span class="text-4xl">N</span>ews</h1>
+                <h1 class="header"><span class="">N</span>ews</h1>
                 <hr class="w-7 h-1 bg-gray-400">
             </div>
             <div class="mt-5">
@@ -120,26 +120,27 @@
             <img src="images/penn-center-innovation.jpg" alt="" class="hidden">
             <img src="images/penn-center-innovation_1.jpg" alt="" class="">
             <div class="p-2 bg-[#011F5B] text-white ml-5 mr-5 -translate-y-1/3">
-                <div class="border-gray-500 border p-5 pt-10">
+                <div class="border-gray-500/50 border p-5 pt-10">
                     <p class="uppercase text-center p-5 font-semibold">Campus & Community </p>
                     <a href="#" class="text-xl">
-                        <p class="text-center">Penn Center for Innovation celebrates 10 years</p>
+                        <p class="text-center ">Penn Center for Innovation celebrates 10 years</p>
                     </a>
-                    <hr>
-                    <p>The University’s nexus for technology transfer supports researchers in their innovative efforts,
-                        from
-                        CAR T to mRNA advancements that have dramatically reshaped the world.</p>
+                    <hr class="w-5 h-1 bg-gray-300 m-5 ml-auto mr-auto opacity-40 rounded">
+                    <p class="text-center mb-5">The University’s nexus for technology transfer supports researchers in
+                        their innovative efforts,from CAR T to mRNA advancements that have dramatically reshaped the
+                        world.</p>
 
-                    <a href="#">LEARN MORE</a>
+                    <p class="text-center mb-16 mt-16"><a href="#"
+                            class="border border-gray-400/50 p-5 pl-8 pr-8 rounded-3xl font-semibold">LEARN MORE</a></p>
                 </div>
             </div>
         </div>
-        <div>
-            <h1>Upcoming Events</h1>
-            <hr>
+        <div class="upcommig-event pl-5 pr-5 text-[#011F5B]">
+            <h1 class="header"><span>U</span>pcoming Events</h1>
+            <hr class="w-7 h-1 bg-gray-400">
             <div>
-                <div>
-                    <div>
+                <div class=" ">
+                    <div class="w-4/5 ">
                         <img src="images/grad-center-locust-walk.jpg" alt="">
                         <div>
                             <p>Talks</p>
@@ -153,7 +154,7 @@
                         </div>
                     </div>
 
-                    <div>
+                    <div class="">
                         <div>
                             <p>Special Events</p>
                         </div>
@@ -167,7 +168,7 @@
                             <p>19</p>
                         </div>
                     </div>
-                    <div>
+                    <div class="">
                         <div>
                             <p>Talks</p>
                         </div>
@@ -181,31 +182,47 @@
                         </div>
                     </div>
                 </div>
-                <p><a href="">MORE EVENTS VIA PENN TODAY</a></p>
+                <div class="bullet-span">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <p class="text-[#011F5B] text-center mt-5 mb-10"><a href="">MORE EVENTS VIA PENN TODAY</a></p>
             </div>
         </div>
 
-        <div>
-            <div>
-                <div>
-                    <img src="https://www.upenn.edu/sites/default/files/2021-07/Inspiring-Impact-Campaign-Logo.png"
-                        alt="">
-                </div>
-                <hr>
-                <p>Your support ignites change locally and globally, transforming Penn into a powerful engine that
-                    advances knowledge for society's greatest good.</p>
+        <div class=" pl-5 pr-5 flex flex-col gap-10">
+            <div class="bg-gray-100 p-2">
+                <div class="border border-gray-600/30 p-5 text-[#011F5B]">
+                    <div>
+                        <img src="https://www.upenn.edu/sites/default/files/2021-07/Inspiring-Impact-Campaign-Logo.png"
+                            alt="">
+                    </div>
+                    <hr class="w-5 h-1 bg-gray-300 ml-auto mr-auto mt-2">
 
-                <a href="#">SUPPORT PENN</a>
+                    <p class="text-center  text-sm font-medium pt-5 pb-5">Your support ignites change
+                        locally and globally, transforming Penn into a powerful engine that
+                        advances knowledge for society's greatest good.</p>
+
+                    <p class="text-center mb-16 mt-16"><a href="#"
+                            class="border border-gray-400/50 p-5 pl-8 pr-8 rounded-3xl text-sm font-semibold">SUPPORT
+                            PENN</a>
+                    </p>
+                </div>
             </div>
 
-            <div>
-                <div>
-                    <h2>Supporting Our Community</h2>
+            <div class="p-2 bg-[#011F5B] text-white ">
+                <div class="border-gray-500/50 border p-5 pt-10">
+                    <div>
+                        <h1 class="header text-center">Supporting Our Community</h1>
+                    </div>
+                    <hr class="w-5 h-1 bg-gray-300 ml-auto mr-auto mt-2">
+                    <p class="pt-8 pb-5 text-center">During these challenging times, Penn remains committed to supporting students, faculty, and staff and
+                        to sharing information with our larger community of alumni, parents, and friends.</p>
+                    <p class="text-center mb-16 mt-16"><a href="#"
+                            class="border border-gray-400/50 p-5 pl-8 pr-8 rounded-3xl font-semibold">LEARN MORE</a>
+                    </p>
                 </div>
-                <hr>
-                <p>During these challenging times, Penn remains committed to supporting students, faculty, and staff and
-                    to sharing information with our larger community of alumni, parents, and friends.</p>
-                <a href="#">LEARN MORE</a>
             </div>
         </div>
         <div>
@@ -262,7 +279,7 @@
                     </a>
                 </div>
             </div>
-            <div>
+            <div class="bullet-span">
                 <span></span>
                 <span></span>
                 <span></span>
