--- a/index.html
+++ b/index.html
@@ -87,49 +87,55 @@
                     <hr class="w-7 h-1 bg-gray-400">
                 </div>
             </div>
-            <div class="mt-5">
-                <div class="news">
+            <div class="xl:flex xl:gap-3    mt-5">
+                <div class="news xl:w-1/2">
                     <a href="">
                         <img src="images/pavilion-gift-teaser.jpg" alt="pavilion-gift-teaser">
                         <h3>Health Science</h3>
                         <p>Catherine and Anthony Clifton make transformational gift to accelerate patient care,
                             research, and education at Penn Medicine</p>
-
-
                     </a>
                     <hr class="w-5 h-1 bg-gray-300  mt-2">
                 </div>
 
-                <div>
+                <div class="xl:grid xl:grid-cols-2 xl:gap-x-3 xl:w-1/2">
+                   
                     <div class="news">
+                        <img src="images/epstein-jon-teaser.jpg" alt="pavilion-gift-teaser"  class=" xl:block   hidden">
+
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
                         <hr>
                     </div>
                     <div class="news">
+                        <img src="images/america-250-teaser-social-main.jpg" alt="pavilion-gift-teaser"  class=" xl:block   hidden">
+
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
                         <hr>
                     </div>
                     <div class="news">
+                        <img src="images/preservation-campus-teaser.jpg" alt="pavilion-gift-teaser"  class=" xl:block   hidden">
+
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
                         <hr>
                     </div>
                     <div class="news">
+                        <img src="images/chan-vanessa-teaser.jpg" alt="pavilion-gift-teaser" class=" xl:block   hidden">
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
                         <hr>
                     </div>
 
-                    <p class="p-news">MORE NEWS VIA PENN TODAY</p>
+                    <p class="p-news xl:col-span-2 xl:text-center">MORE NEWS VIA PENN TODAY</p>
                 </div>
             </div>
         </div>
-        <div class="mt-10">
-            <img src="images/penn-center-innovation.jpg" alt="" class="hidden">
-            <img src="images/penn-center-innovation_1.jpg" alt="" class="">
-            <div class="p-2 bg-[#011F5B] text-white ml-5 mr-5 -translate-y-1/3">
+        <div class=" xl:max-w-6xl xl:mx-auto xl:relative mt-10">
+            <img src="images/penn-center-innovation.jpg" alt="" class="xl:block  hidden">
+            <img src="images/penn-center-innovation_1.jpg" alt="" class="xl:hidden  ">
+            <div class="xl:absolute xl:translate-y-0 xl:max-w-sm xl:top-10 xl:left-8  p-2 bg-[#011F5B] text-white ml-5 mr-5 -translate-y-1/3">
                 <div class="border-gray-500/50 border p-5 pt-10">
                     <p class="uppercase text-center p-5 font-semibold">Campus & Community </p>
                     <a href="#" class="text-xl">
