--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class=" bg-[url(./avian-bird-flu.jpg)] bg-no-repeat bg-cover">
+        <div class=" bg-[url(assets/avian-bird-flu.jpg)] bg-no-repeat bg-cover">
             <div class="bg-black bg-opacity-50  text-white">
                 <div
                     class="xl:border-none xl:justify-between xl:gap-5 xl:max-w-6xl xl:ml-auto xl:mr-auto flex justify-around items-center border-b-2 pt-2 pb-2 ">
@@ -132,7 +132,7 @@
                 </div>
             </div>
         </div>
-        <div class=" xl:bg-[url(./penn-center-innovation.jpg)] xl:bg-no-repeat xl:bg-cover xl:max-w-7xl xl:mx-auto xl:relative xl:px-36 xl:py-20 mt-10">
+        <div class=" xl:bg-[url(assets/penn-center-innovation.jpg)] xl:bg-no-repeat xl:bg-cover xl:max-w-7xl xl:mx-auto xl:relative xl:px-36 xl:py-20 mt-10">
             <img src="images/penn-center-innovation_1.jpg" alt="" class="xl:hidden  ">
             <div class="xl:m-0 xl:translate-y-0 xl:max-w-md xl:top-10 xl:left-8  p-2 bg-[#011F5B] text-white ml-5 mr-5 -translate-y-1/3">
                 <div class="border-gray-500/50 border p-5 pt-10">
