--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main>
         <div class="xl:max-w-6xl xl:mx-auto pl-5 pr-5 pt-20 text-[#011F5B]">
-            <div class="xl:flex xl: justify-between flex-row-reverse   " >
+            <div class="xl:flex xl: justify-between flex-row-reverse   ">
                 <div class="xl:m-0 ml-auto mr-auto flex place-content-center pb-8">
                     <select name="" id=""
                         class="w-36 overflow-auto p-3 bg-white border border-white border-b-gray-400 ">
@@ -99,23 +99,25 @@
                 </div>
 
                 <div class="xl:grid xl:grid-cols-2 xl:gap-x-3 xl:w-1/2">
-                   
+
                     <div class="news">
-                        <img src="images/epstein-jon-teaser.jpg" alt="pavilion-gift-teaser"  class=" xl:block   hidden">
+                        <img src="images/epstein-jon-teaser.jpg" alt="pavilion-gift-teaser" class=" xl:block   hidden">
 
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
                         <hr>
                     </div>
                     <div class="news">
-                        <img src="images/america-250-teaser-social-main.jpg" alt="pavilion-gift-teaser"  class=" xl:block   hidden">
+                        <img src="images/america-250-teaser-social-main.jpg" alt="pavilion-gift-teaser"
+                            class=" xl:block   hidden">
 
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
                         <hr>
                     </div>
                     <div class="news">
-                        <img src="images/preservation-campus-teaser.jpg" alt="pavilion-gift-teaser"  class=" xl:block   hidden">
+                        <img src="images/preservation-campus-teaser.jpg" alt="pavilion-gift-teaser"
+                            class=" xl:block   hidden">
 
                         <h3>Health Science</h3>
                         <p>Jonathan A. Epstein named head of Perelman School of Medicine and Penn Health System</p>
@@ -134,7 +136,8 @@
         </div>
         <div class="mybg2 xl:bg-no-repeat xl:bg-cover xl:max-w-7xl xl:mx-auto xl:relative xl:px-36 xl:py-20 mt-10">
             <img src="images/penn-center-innovation_1.jpg" alt="" class="xl:hidden  ">
-            <div class="xl:m-0 xl:translate-y-0 xl:max-w-md xl:top-10 xl:left-8  p-2 bg-[#011F5B] text-white ml-5 mr-5 -translate-y-1/3">
+            <div
+                class="xl:m-0 xl:translate-y-0 xl:max-w-md xl:top-10 xl:left-8  p-2 bg-[#011F5B] text-white ml-5 mr-5 -translate-y-1/3">
                 <div class="border-gray-500/50 border p-5 pt-10">
                     <p class="uppercase text-center p-5 font-semibold">Campus & Community </p>
                     <a href="#" class="xl:text-3xl text-xl">
@@ -150,50 +153,59 @@
                 </div>
             </div>
         </div>
-        <div class="upcommig-event pl-5 pr-5 text-[#011F5B]">
+        <div class="xl:max-w-6xl xl:mx-auto xl:my-16 pl-5 pr-5 text-[#011F5B]">
             <h1 class="header"><span>U</span>pcoming Events</h1>
             <hr class="w-7 h-1 bg-gray-400">
-            <div>
-                <div class=" ">
-                    <div class="w-4/5 ">
+            <div class="xl:overflow-x-hidden  overflow-x-auto">
+                <div class="xl:justify-between xl:max-w-full xl:place-content-stretch flex space-x-4 min-w-max">
+                    <div class="xl:max-w-1/3  relative w-56 bg-gray-100">
                         <img src="images/grad-center-locust-walk.jpg" alt="">
-                        <div>
-                            <p>Talks</p>
+                        <div class="-translate-y-full bg-white max-w-min pr-8 pt-4">
+                            <p class="uppercase inline">Talks</p>
+                            <hr class="w-3 h-1 bg-gray-400">
+
                         </div>
-                        <h3>Managing Presentation Anxiety</h3>
-                        <p>Communication Within the Curriculum Associate Director Sue Weber offers tips and tricks to
+                        <h3 class="text-xl font-medium p-4">Managing Presentation Anxiety</h3>
+                        <p class="opacity-85 p-4">Communication Within the Curriculum Associate Director Sue Weber offers
+                            tips and tricks to
                             control anxiety during public speaking. A Penn graduate student ID is required.</p>
-                        <div>
-                            <p>FEB</p>
-                            <p>18</p>
+                        <div class="absolute top-2 right-2 bg-white">
+                            <p class="bg-red-600 text-white text-sm px-1">FEB</p>
+                            <p class="text-center text-xl px-2 pt-2">18</p>
                         </div>
                     </div>
 
-                    <div class="">
-                        <div>
+                    <div class="xl:max-w-1/3  relative w-56 bg-gray-100">
+                        <div class=" bg-gray-100 pr-8 pt-16 pb-10">
                             <p>Special Events</p>
+                            <hr class="w-3 h-1 bg-gray-400">
+
                         </div>
 
-                        <h3>Historic Pennsylvania Hospital Tour</h3>
-                        <p>Holman Biotech Commons hosts a public tour of Pennsylvania Hospital, the nation's first
+                        <h3 class="text-xl font-medium p-4">Historic Pennsylvania Hospital Tour</h3>
+                        <p class="opacity-85 p-4">Holman Biotech Commons hosts a public tour of Pennsylvania Hospital, the
+                            nation's first
                             hospital. Attendees will tour the Great Court, Historic Library, and Surgical Amphitheatre.
                             Registration is required.</p>
-                        <div>
-                            <p>FEB</p>
-                            <p>19</p>
+                        <div class="absolute top-2 right-2 bg-white">
+                            <p class="bg-red-600 text-white text-sm px-1">FEB</p>
+                            <p class="text-center text-xl px-2 pt-2">19</p>
                         </div>
                     </div>
-                    <div class="">
-                        <div>
+                    <div class="xl:max-w-1/3  relative w-56 bg-gray-100">
+                        <div class=" bg-gray-100 pr-8 pt-16 pb-10">
                             <p>Talks</p>
+                            <hr class="w-3 h-1 bg-gray-400">
+
                         </div>
-                        <h3>Jesse Rothstein</h3>
-                        <p>Jesse Rothstein, a professor of public policy and economics at the University of California,
+                        <h3 class="text-xl font-medium p-4">Jesse Rothstein</h3>
+                        <p class="opacity-85 p-4">Jesse Rothstein, a professor of public policy and economics at the
+                            University of California,
                             Berkeley, hosts a seminar about the role of social safety net programs in college student
                             success.</p>
-                        <div>
-                            <p>FEB</p>
-                            <p>21</p>
+                        <div class="absolute top-2 right-2 bg-white">
+                            <p class="bg-red-600 text-white text-sm px-1">FEB</p>
+                            <p class="text-center text-xl px-2 pt-2">21</p>
                         </div>
                     </div>
                 </div>
@@ -202,13 +214,14 @@
                     <span></span>
                     <span></span>
                 </div>
-                <p class="text-[#011F5B] text-center mt-5 mb-10"><a href="">MORE EVENTS VIA PENN TODAY</a></p>
+                <p class="text-[#011F5B] text-center font-semibold mt-5 mb-10"><a href="">MORE EVENTS VIA PENN TODAY</a>
+                </p>
             </div>
         </div>
 
-        <div class=" pl-5 pr-5 flex flex-col gap-10">
-            <div class="bg-gray-100 p-2">
-                <div class="border border-gray-600/30 p-5 text-[#011F5B]">
+        <div class="xl:flex-row xl:max-w-6xl xl:mx-auto pl-5 pr-5 flex flex-col gap-10">
+            <div class="xl:w-1/2 bg-gray-100 p-2">
+                <div class="  border border-gray-600/30 p-5 text-[#011F5B]">
                     <div>
                         <img src="https://www.upenn.edu/sites/default/files/2021-07/Inspiring-Impact-Campaign-Logo.png"
                             alt="">
@@ -226,7 +239,7 @@
                 </div>
             </div>
 
-            <div class="p-2 bg-[#011F5B] text-white ">
+            <div class="xl:w-1/2  p-2 bg-[#011F5B] text-white ">
                 <div class="border-gray-500/50 border p-5 pt-10">
                     <div>
                         <h1 class="header text-center">Supporting Our Community</h1>
@@ -241,66 +254,76 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h2>Penn Priorities</h2>
-            <hr>
-            <p>A look at a few of our big picture priorities that improve Penn as we create knowledge to benefit the
-                world.</p>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <a href="#">
-                        <img src="images/research-innovation-singh.jpg" alt="">
-                        <div>
-                            <p>In principle & Practice</p>
-                            <img src="images/icon-priority-arrow.svg" alt="">
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="images/covenant.jpeg" alt="">
-                        <div>
-                            <p>In principle & Practice</p>
-                            <img src="images/icon-priority-arrow.svg" alt="">
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="images/mark-alan-hughes-kleinman.jpg" alt="">
-                        <div>
-                            <p>In principle & Practice</p>
-                            <img src="images/icon-priority-arrow.svg" alt="">
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="images/diversity-jackson-hbo-editing.jpg" alt="">
-                        <div>
-                            <p>In principle & Practice</p>
-                            <img src="images/icon-priority-arrow.svg" alt="">
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="#">
-                        <img src="images/detlefsen-classroom-1.jpg" alt="">
-                        <div>
-                            <p>In principle & Practice</p>
-                            <img src="images/icon-priority-arrow.svg" alt="">
-                        </div>
-                    </a>
+        <div class="xl:bg-white bg-[#011F5B] text-white my-8">
+            <div class="xl:bg-[#011F5B] xl:pb-80">
+
+                <div class="xl:max-w-xl xl:mx-auto   my-4">
+                    <h2 class="xl:text-6xl xl:pt-16  text-center text-2xl py-8">Penn Priorities</h2>
+                    <hr class="w-5 h-1 bg-gray-300 ml-auto mr-auto my-2">
+                    <p class="px-7 text-center">A look at a few of our big picture priorities that improve Penn as we create
+                        knowledge to benefit the
+                        world.</p>
                 </div>
             </div>
-            <div class="bullet-span">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="xl:bg-none xl:-translate-y-60 overflow-x-auto my-10">
+                <div class=" flex space-x-4 min-w-max px-2">
+                   
+                    <div class="xl:max-w-xl max-w-72">
+                        <a href="#">
+                            <img src="images/covenant.jpeg" alt="">
+                            <div class="  xl:max-w-xs flex items-center bg-red-600 -translate-y-full">
+                                <p class="w-80 text-[#011F5B] bg-white py-3">In principle & Practice</p>
+                                <img src="images/icon-priority-arrow.svg" alt="" class="w-1/5 h-4  ">
+                            </div>
+                        </a>
+                    </div>
+                    <div class=" xl:max-w-xl max-w-72">
+                        <a href="#">
+                            <img src="images/research-innovation-singh.jpg" alt="">
+                            <div class=" xl:max-w-xs flex items-center bg-red-600 -translate-y-full">
+                                <p class="w-80 text-[#011F5B] bg-white py-3">In principle & Practice</p>
+                                <img src="images/icon-priority-arrow.svg" alt="" class="w-1/5 h-4  ">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="xl:max-w-xl max-w-72">
+                        <a href="#">
+                            <img src="images/mark-alan-hughes-kleinman.jpg" alt="">
+                            <div class=" xl:max-w-xs flex items-center bg-red-600 -translate-y-full">
+                                <p class="w-80 text-[#011F5B] bg-white py-3">In principle & Practice</p>
+                                <img src="images/icon-priority-arrow.svg" alt="" class="w-1/5 h-4  ">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="xl:max-w-xl max-w-72">
+                        <a href="#">
+                            <img src="images/diversity-jackson-hbo-editing.jpg" alt="">
+                            <div class=" xl:max-w-xs flex items-center bg-red-600 -translate-y-full">
+                                <p class="w-80 text-[#011F5B] bg-white py-3">In principle & Practice</p>
+                                <img src="images/icon-priority-arrow.svg" alt="" class="w-1/5 h-4  ">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="xl:max-w-xl max-w-72 ">
+                        <a href="#">
+                            <img src="images/detlefsen-classroom-1.jpg" alt="">
+                            <div class=" xl:max-w-xs flex items-center bg-red-600 -translate-y-full">
+                                <p class="w-80 text-[#011F5B] bg-white py-3">In principle & Practice</p>
+                                <img src="images/icon-priority-arrow.svg" alt="" class="w-1/5 h-4  ">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="bullet-span">
+                    <div>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+
+                    </div>
+                </div>
             </div>
         </div>
 
